@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*squashed-portage-0.2 (30 Mar 2011)
+
+  30 Mar 2011; Justin Lecher <jlec@gentoo.org> +squashed-portage-0.2.ebuild,
+  squashed-portage-9999.ebuild:
+  Version BUmp, fixes minor code bugs
+
   26 Mar 2011; Johann Schmitz <johann@j-schmitz.net> squashed-portage-9999.ebuild,
   metadata.xml:
   Updated HOMEPAGE in ebuild
